--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,7 +6,7 @@
 <div style="margin-bottom: 50px;">
     
     <div style="background: url({% static 'core/img/soccer-open-field.jpg' %}) no-repeat center center; background-size: cover; text-align: center; padding: 20px;">
-        <h1 class='home-title'> ¿Quieres reservar una cancha para jugar? reserva una con nosotros! </h1>
+        <h1 class='home-title'> ¿Quieres reservar una cancha para jugar? reserva una con nosotros </h1>
     
         <h3 class='home-title2'> Tienes distintos clubes para escoger </h3>
         
@@ -17,6 +17,7 @@
 
 
 </div>
+
 
 <h1 style="color: #163E56; text-align: center;" >Ultimos clubes registrados en iPartidos</h1>
 
@@ -34,9 +35,12 @@
         <div class="card-body">
             <h5 class="card-title">{{ club.clubName }}</h5>
             <div class="card-text">
-                <p>Abierto de {{ club.clubApertureTime }} a {{ club.clubClosureTime }}</p>
+                <p>Abierto de {{ club.clubApertureTime }} a {{ club.clubClosureTime }} hrs</p>
                 <p>{{ club.clubAddress }}</p>
             </div>
+
+
+
             <a href="{% url 'field_detail' pk=club.id %}" class="btn btn-primary btn-block">
                 
                 {% if request.user.role != 'client' or request.user.is_superuser %}
